flipping icons and m changes

--- a/UK.html
+++ b/UK.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study In Australia</title>
+    <title>Study In UK</title>
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
@@ -57,16 +57,16 @@
         <div class="shadow-lg rounded-xl overflow-hidden w-[56%] ">
             <div class="p-[20px] text-start">
                 <span><i class="fa-solid fa-info text-[30px] flex flex-col font-bold text-[orangered]"></i><h2 class="text-[30px] text-[#1E3A5F] font-bold">Top Courses</h2></span>
-                <div class="text-[gray] text-md flex flex-col gap-[9px] ">
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Business and MBA Programs</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Computer Science and IT</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Engineering and Technology</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Law and Legal Studies</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Medicine and Healthcare</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Arts, Design and Media</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Finance and Economics</div></span>
-                    <span><i class="fa-solid fa-circle text-[7px]"></i><div>Social Sciences</div></span>
-                </div>
+                <ul class="text-[gray] text-md flex flex-col gap-[9px] ">
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Business and MBA Programs</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Computer Science and IT</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Engineering and Technology</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Law and Legal Studies</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Medicine and Healthcare</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Arts, Design and Media</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Finance and Economics</li>
+                    <li class="flex items-center gap-2 ml-3"><i class="fa-solid fa-circle text-[7px]"></i>Social Sciences</li>
+                </ul>
                 </div>
             </div>
         </div>
