--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ALVN Consultancy</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -19,15 +20,15 @@
                     class="text-[30px] text-red-700 font-bold">N</span></div>
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
+                <a href="C:\\Users\\User\\OneDrive\Desktop\\web\\index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
                     <a href=""
-                        class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px]  hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
+                        class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
                         Now</a>
                 </div>
             </div>
@@ -57,7 +58,7 @@
         </p>
     </div>
     <div class="grid grid-cols-3 gap-[20px]  p-[40px] w-[90%] mx-auto">
-        <div class="shadow rounded-xl overflow-hidden hover:shadow-lg hover:translate-y-[5px] duration-100 ">
+        <div class="shadow rounded-xl overflow-hidden hover:shadow-lg hover:translate-y-[5px] duration-100 " data-aos="fade-up">
             <img class="h-[220px] object-cover w-full"
                 src="https://images.unsplash.com/photo-1523482580672-f109ba8cb9be" alt="">
             <div class="p-[10px] text-center">
@@ -65,7 +66,8 @@
                 <p class="text-[gray] text-sm pt-1 pb-3">
                     World-class universities and vibrant multicultural experience
                 </p>
-                <a href="file:///C:/Users/User/OneDrive/Desktop/web/australia.html" class="bg-[#1E3A5F] px-4 py-2 text-white rounded-3xl">Learn More
+                <a href="file:///C:/Users/User/OneDrive/Desktop/web/australia.html"
+                    class="bg-[#1E3A5F] px-4 py-2 text-white rounded-3xl">Learn More
                 </a>
             </div>
         </div>
@@ -78,7 +80,8 @@
                 <p class="text-[gray] text-sm pt-1 pb-3">
                     Historic institutions and globally recognized qualifications
                 </p>
-                <a href="file:///C:/Users/User/OneDrive/Desktop/web/UK.html" class="bg-[#1E3A5F] px-4 py-2 text-white rounded-3xl ">
+                <a href="file:///C:/Users/User/OneDrive/Desktop/web/UK.html"
+                    class="bg-[#1E3A5F] px-4 py-2 text-white rounded-3xl ">
                     Learn More
                 </a>
             </div>
@@ -190,44 +193,44 @@
         </p>
     </div>
 
-    <div class="grid grid-cols-3  gap-[35px] p-[40px] pt-[70px] text-center ">
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px] w-full hover:border-1 hover:border-red-300 ">
-            <i class="fa-solid fa-graduation-cap text-[50px] hover:text-red-300 pt-10px"></i>
+    <div class="grid grid-cols-3  gap-[45px] p-[40px] pt-[70px] text-center px-[100px]">
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full py-[20px] hover:border-1 hover:border-red-300 group">
+            <i class="fa-solid fa-graduation-cap text-[50px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 pt-10px"></i>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Career Counselling</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Expert guidance to help you choose the right course and university
                 based on your career goals</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px]  w-full hover:border-1  hover:border-red-300">
-            <i class="fa-regular fa-file-lines text-[50px] hover:text-red-300 pt-10px"></i>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px]  w-full hover:border-1 hover:border-red-300 group">
+            <i class="fa-regular fa-file-lines text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
             <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Documentation Support</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Complete assistance with application documents, SOP, LOR, and
                 other requirements.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px] w-full hover:border-1  hover:border-red-300">
-            <i class="fa-solid fa-book-open text-[50px] hover:text-red-300 pt-10px"></i>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1  hover:border-red-300 group">
+            <i class="fa-solid fa-book-open text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
             <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Test Preparation</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Comprehensive coaching for IELTS, PTE, TOEFL, GRE, GMAT, and
                 language tests.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px] w-full hover:border-1  hover:border-red-300">
-            <i class="fa-brands fa-cc-visa text-[35px] hover:text-red-300 pt-10px"></i>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1  hover:border-red-300 group">
+            <i class="fa-brands fa-cc-visa text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
             <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Visa Guidance</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Step-by-step visa application support with high success rate.</p>
         </div>
 
         <div
-            class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px] w-full hover:border-1 hover:border-red-300 items-center">
-            <i class="fa-solid fa-building-columns text-[35px] hover:text-red-300 pt-10px"></i>
+            class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1 hover:border-red-300 items-center group">
+            <i class="fa-solid fa-building-columns text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
             <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">University Admission</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Direct partnerships with top universities for seamless admission
                 process.</p>
         </div>
 
-        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[210px] w-full hover:border-1 hover:border-red-300">
-            <i class="fa-solid fa-plane-departure text-[35px] hover:text-red-300 pt-10px"></i>
+        <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full hover:border-1 hover:border-red-300 group ">
+            <i class="fa-solid fa-plane-departure text-[50px] py-[20px] hover:text-red-300 pt-10px group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
             <h2 class="text-[#1E3A5F] text-[22px] pt-5 ">Pre-departure Briefing</h2>
             <p class="text-[#6C757D] w-[65%] mx-auto">Essential information and tips to prepare you for life abroad.</p>
         </div>
@@ -248,27 +251,27 @@
         </div>
 
         <div class="grid grid-cols-4 p-[100px] w-[100%] mx-auto gap-[50px] text-center">
-            <div>
-                <i class="fa-solid fa-certificate text-[50px] text-white pb-8 "></i>
+            <div class="group">
+                <i class="fa-solid fa-certificate text-[50px] text-white pb-8 group-hover:text-red-400"></i>
                 <h2 class="text-white text-[25px] text-center pb-2 font-semibold">Expert Counselors</h2>
                 <p class="text-white text-md text-center">Experienced team with deep knowledge of global education
                     systems</p>
             </div>
 
-            <div>
-                <i class="fa-regular fa-handshake text-[50px] text-white pb-8"></i>
+            <div class="group">
+                <i class="fa-regular fa-handshake text-[50px] text-white pb-8 group-hover:text-red-400"></i>
                 <h2 class="text-white text-[25px] text-center pb-2 font-semibold">Trusted Partners</h2>
                 <p class="text-white text-md text-center">Direct partnerships with 200+ universities worldwide</p>
             </div>
 
-            <div>
-                <i class="fa-solid fa-chart-line text-[50px] text-white  pb-8"></i>
+            <div class="group">
+                <i class="fa-solid fa-chart-line text-[50px] text-white  pb-8 group-hover:text-red-400"></i>
                 <h2 class="text-white text-[25px] text-center pb-2 font-semibold">High Success Rate</h2>
                 <p class="text-white text-md text-center">98% visa success rate with thousands of satisfied students</p>
             </div>
 
-            <div>
-                <i class="fa-regular fa-headphones text-[50px] text-white pb-8"></i>
+            <div class="group">
+                <i class="fa-regular fa-headphones text-[50px] text-white pb-8 group-hover:text-red-400"></i>
                 <h2 class="text-white text-[25px] text-center pb-2 font-semibold">24/7 Support</h2>
                 <p class="text-white text-md text-center">Continuous support from application to arrival</p>
             </div>
@@ -299,7 +302,7 @@
                 <p class="text-[#C4C4C4] text-md text-start">ALVN Education Consultancy is your trusted partner for
                     studying abroad. We provide comprehensive guidance and support to help students achieve their dreams
                     of international education.</p>
-                <div class="flex flex-row text-white text-[20px] pt-[16px] gap-[30px] items-center ">
+                <div class="px-[80px] text-white text-[22px] pt-[16px] gap-[30px] h-[50px] w-[50px] flex justify-center items-center rounded-full">
                     <i class="fa-brands fa-facebook rounded-full bg-[navy] items-center "></i>
                     <i class="fa-brands fa-instagram bg-[navy] rounded-full items-center "></i>
                     <i class="fa-brands fa-linkedin bg-[navy] rounded-full items-center "></i>
@@ -310,12 +313,22 @@
 
             <div>
                 <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Quick Links</h2>
-                <div class="text-[#C4C4C4] text-md flex flex-col gap-[9px] font-semibold">
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Home</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">About Us</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Services</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Blog</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Contact</a></span>
+                <div class="text-[#C4C4C4] text-md flex flex-col gap-[9px] font-semibold ">
+                    <span class="hover:translate-x-[6px] duration-250"><i
+                            class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Home</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i
+                            class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">About Us</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i
+                            class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Services</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i
+                            class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Blog</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i
+                            class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Contact</a></span>
                 </div>
             </div>
 
@@ -323,11 +336,16 @@
             <div>
                 <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Study Destinations</h2>
                 <div class="text-[#C4C4C4] text-md gap-[10px] flex flex-col font-semibold">
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Australia</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">United Kingdom</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">USA</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Canada</a></span>
-                    <span><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Japan</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Australia</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">United Kingdom</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">USA</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Canada</a></span>
+                    <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href=""
+                            class="hover:text-[orangered]">Japan</a></span>
                 </div>
             </div>
 
@@ -335,11 +353,11 @@
             <div>
                 <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Contact Info</h2>
                 <div class="flex flex-col text-md text-[#C4C4C4] gap-[10px]">
-                    <span><i class="fa-solid fa-location-dot text-[orangered]"></i>  <a href="">Kalanki-14, Kathmandu,
+                    <span><i class="fa-solid fa-location-dot text-[orangered]"></i> <a href="">Kalanki-14, Kathmandu,
                             Nepal</a></span>
-                    <span><i class="fa-solid fa-phone text-[orangered]"></i>  <a href="">+977-9851083578</a></span>
-                    <span><i class="fa-brands fa-whatsapp text-[orangered]"></i>  <a href="">+977-9851083578</a></span>
-                    <span><i class="fa-solid fa-envelope text-[orangered]"></i>   <a href="">info@alvn.edu.np</a></span>
+                    <span><i class="fa-solid fa-phone text-[orangered]"></i> <a href="">+977-9851083578</a></span>
+                    <span><i class="fa-brands fa-whatsapp text-[orangered]"></i> <a href="">+977-9851083578</a></span>
+                    <span><i class="fa-solid fa-envelope text-[orangered]"></i> <a href="">info@alvn.edu.np</a></span>
                 </div>
             </div>
 
@@ -354,13 +372,22 @@
         </div>
     </div>
 
-        <a href="" class="fixed bottom-[95px] right-[40px] text-[25px] bg-[#0E3386] text-white rounded-full hover:bg-[#C0392B] duration-250">
-            <i class="fa-solid fa-angle-up"></i>
-        </a>
+    <a href=""
+        class="fixed bottom-[95px] right-[40px] text-[25px] bg-[#0E3386] text-white hover:bg-[#C0392B] duration-250 h-[50px] w-[50px] flex justify-center items-center rounded-full">
+        <i class="fa-solid fa-angle-up text-[30px]"></i>
+    </a>
 
-        <a href="https://www.whatsapp.com/" target="_blank" class="fixed bottom-[35px] right-[38px] text-[35px] bg-[#55DD33] text-white rounded-full">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
+    <a href="https://www.whatsapp.com/" target="_blank"
+        class="fixed bottom-[35px] right-[38px] text-[35px] bg-[#55DD33] text-white h-[50px] w-[50px] flex justify-center items-center rounded-full">
+        <i class="fa-brands fa-whatsapp text-[40px]"></i>
+    </a>
 
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
