--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
 
         <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
-                <h2 class="text-white text-[25px] text-start pb-2 font-semibold">About ALVN</h2>
+                <h2 class="text-white text-[25px] text-start pb-2 font-bold">About ALVN</h2>
                 <p class="text-[#C4C4C4] text-md text-start">ALVN Education Consultancy is your trusted partner for
                     studying abroad. We provide comprehensive guidance and support to help students achieve their dreams
                     of international education.</p>
@@ -187,7 +187,7 @@
 
 
             <div>
-                <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Quick Links</h2>
+                <h2 class="text-white text-[25px] text-start pb-2 font-bold">Quick Links</h2>
                 <div class="text-[#C4C4C4] text-md flex flex-col gap-[9px] font-semibold">
                     <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Home</a></span>
                     <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">About Us</a></span>
@@ -199,7 +199,7 @@
 
 
             <div>
-                <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Study Destinations</h2>
+                <h2 class="text-white text-[25px] text-start pb-2 font-bold">Study Destinations</h2>
                 <div class="text-[#C4C4C4] text-md gap-[10px] flex flex-col font-semibold">
                     <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">Australia</a></span>
                     <span class="hover:translate-x-[6px] duration-250"><i class="fa-solid fa-angle-right text-[orangered]"></i><a href="" class="hover:text-[orangered]">United Kingdom</a></span>
@@ -211,7 +211,7 @@
 
 
             <div>
-                <h2 class="text-white text-[25px] text-start pb-2 font-semibold">Contact Info</h2>
+                <h2 class="text-white text-[25px] text-start pb-2 font-bold">Contact Info</h2>
                 <div class="flex flex-col text-md text-[#C4C4C4] gap-[10px]">
                     <span><i class="fa-solid fa-location-dot text-[orangered]"></i>  <a href="">Kalanki-14, Kathmandu,
                             Nepal</a></span>
