--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
                 <a href="/index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
+                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
                     <a href=""
                         class="bg-[#C0392B] px-4 py-2 text-white rounded-3xl text-[16px]  hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">Apply
