--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="C:\\Users\\User\\OneDrive\Desktop\\web\\index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
-                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
+                <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Blog</a>
                 <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\contact.html" class="hover:text-[orangered] cursor-pointer duration-150">Contact</a>
                 <div>
