m changes and fading effect

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -47,9 +48,9 @@
         <div class="pt-[60px] col-span-2">
             <div class="grid grid-cols-2 h-[620px]">
                 <div class="p-[20px] shadow-lg rounded-xl w-full col-span-2">
-                        <h2 class="text-[30px] text-[#1E3A5F] font-semibold pb-[25px]">Send Us a Message</h2>
+                        <h2 class="text-[30px] text-[#1E3A5F] font-semibold pb-[25px]" data-aos="fade-up">Send Us a Message</h2>
                     <form action="">
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid grid-cols-2 gap-6" data-aos="fade-up">
                             <div>
                                 <label for="name">Full Name*</label>
                                 <input type="text" placeholder="Your Full Name" id="name" name="full_name"
@@ -101,7 +102,7 @@
         </div> 
 
 
-        <div class="pt-[60px]">
+        <div class="pt-[60px]" data-aos="fade-up">
             <div class="p-[10px] h-[620px] bg-[#1E3A5F] shadow-lg rounded-xl overflow-hidden overflow-hidden">
                 <h2 class="text-[30px] py-[30px] text-white font-semibold pb-[25px] px-4">Get In Touch</h2>
 
@@ -162,7 +163,7 @@
         </div>
     </div>
 
-    <section class="w-full">
+    <section class="w-full" data-aos="fade-up">
         <div class="h-[550px] py-[50px] px-[100px] shadow-lg pb-[80px]">
             <iframe class="w-full h-full rounded-2xl" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.8073478618957!2d85.28177051506186!3d27.693812082796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19b5dc4c5b7f%3A0x7a4b0b0f12b6c9c0!2sKalanki%2C%20Kathmandu%2044600!5e0!3m2!1sen!2snp!4v1699999999999!5m2!1sen!2snp"></iframe>
         </div>
@@ -239,5 +240,10 @@
         <a href="https://www.whatsapp.com/" target="_blank" class="fixed bottom-[35px] right-[38px] text-[35px] bg-[#55DD33] text-white h-[50px] w-[50px] flex justify-center items-center rounded-full">
             <i class="fa-brands fa-whatsapp"></i>
         </a>
+
+         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
