--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     class="text-[30px] text-red-700 font-bold">N</span></div>
             <div
                 class="flex flex-row gap-[40px] text-center justify-between text-[black] text-md font-semibold p-[35px] pl-[10px] pr-[40px] ">
-                <a href="C:\\Users\\User\\OneDrive\Desktop\\web\\index.html" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
+                <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Home</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">About Us</a>
                 <a href="" class="hover:text-[orangered] cursor-pointer duration-150">Study Destinations</a>
                 <a href="C:\\Users\\User\\OneDrive\\Desktop\\web\\services.html" class="hover:text-[orangered] cursor-pointer duration-150">Services</a>
@@ -51,14 +51,14 @@
     </div>
 
 
-    <div class="text-center pt-[80px] p-[30px] gap-b-[35px]">
+    <div class="text-center pt-[80px] p-[30px] gap-b-[35px]" data-aos="fade-up">
         <h1 class=" text-[#1E3A5F] text-[40px] font-bold">Study Destinations</h1>
         <p class="text-[#6C757D] ">
             Explore top study destinations worldwide with ALVN Education Consultancy
         </p>
     </div>
-    <div class="grid grid-cols-3 gap-[20px]  p-[40px] w-[90%] mx-auto">
-        <div class="shadow rounded-xl overflow-hidden hover:shadow-lg hover:translate-y-[5px] duration-100 " data-aos="fade-up">
+    <div class="grid grid-cols-3 gap-[20px]  p-[40px] w-[90%] mx-auto" data-aos="fade-up">
+        <div class="shadow rounded-xl overflow-hidden hover:shadow-lg hover:translate-y-[5px] duration-100 ">
             <img class="h-[220px] object-cover w-full"
                 src="https://images.unsplash.com/photo-1523482580672-f109ba8cb9be" alt="">
             <div class="p-[10px] text-center">
@@ -187,13 +187,13 @@
     </div>
 
     <div class="text-center pt-[50px]">
-        <h1 class=" text-[#1E3A5F] text-[40px] font-bold">Our Services</h1>
-        <p class="text-[#6C757D] ">
+        <h1 class=" text-[#1E3A5F] text-[40px] font-bold" data-aos="fade-up">Our Services</h1>
+        <p class="text-[#6C757D] " data-aos="fade-up">
             Comprehensive support for your study abroad journey
         </p>
     </div>
 
-    <div class="grid grid-cols-3  gap-[45px] p-[40px] pt-[70px] text-center px-[100px]">
+    <div class="grid grid-cols-3  gap-[45px] p-[40px] pt-[70px] text-center px-[100px]" data-aos="fade-up">
         <div class="shadow rounded-xl pt-[3px] pb-[8px] h-[220px] w-full py-[20px] hover:border-1 hover:border-red-300 group">
             <i class="fa-solid fa-graduation-cap text-[50px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 pt-10px"></i>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 ">Career Counselling</h2>
@@ -238,19 +238,19 @@
 
     <div class="text-center h-[80px] pt-[20px] pb-[30px]">
         <a href=""
-            class="bg-[#C0392B] rounded-3xl text-white px-4 py-2 text-center text-[20px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold">View
+            class="bg-[#C0392B] rounded-3xl text-white px-4 py-2 text-center text-[20px] hover:shadow-lg hover:translate-y-[2px] duration-[100] font-semibold" data-aos="fade-up">View
             All Services</a>
     </div>
 
 
-    <div class="h-[610px] w-full bg-[#007791]">
+    <div class="h-[610px] w-full bg-[#007791]" data-aos="fade-up">
         <div class="text-center">
             <h1 class=" text-white text-[45px] text-b pt-[90px] font-semibold">Why Choose ALVN?</h1>
             <p class="text-[white] text-[20px] pt-[10px] ">Your success is our priority
             </p>
         </div>
 
-        <div class="grid grid-cols-4 p-[100px] w-[100%] mx-auto gap-[50px] text-center">
+        <div class="grid grid-cols-4 p-[100px] w-[100%] mx-auto gap-[50px] text-center" data-aos="fade-up">
             <div class="group">
                 <i class="fa-solid fa-certificate text-[50px] text-white pb-8 group-hover:text-red-400"></i>
                 <h2 class="text-white text-[25px] text-center pb-2 font-semibold">Expert Counselors</h2>
@@ -278,7 +278,7 @@
         </div>
     </div>
 
-    <div class="h-[350px] w-full bg-[#2E5090]">
+    <div class="h-[350px] w-full bg-[#2E5090]" data-aos="fade-up">
         <div class="text-center">
             <h1 class=" text-white text-[45px] text-b pt-[85px] pb-[15px] font-semibold">Ready to Start Your Journey?
             </h1>
